# 1.pyclass

./: README.md  desfio.py  pyproject.toml  sum_val.py  tam_nome.py
