[tool.poetry]
name = "1-pyclass"
version = "0.1.0"
description = ""
authors = ["ferruccio_ribeiro <ferruccioribeiro@outlook.com>"]
readme = "README.md"
packages = [{include = "1"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
